erDiagram
    users {
        int id PK
        string firebase_uid UK "Unique Firebase User ID"
        string email UK
        string name
        datetime dob
        string gender
        float lat
        float lng
        string emergency_name
        string emergency_phone
        string emergency_email
        string phone
        string path
    }

    sessions {
        int id PK
        string user_uid FK "References users.firebase_uid"
        string mood
        string path
        datetime created_at
        int duration_seconds
        string current_phase
        boolean is_ended
        boolean is_crisis_active
    }

    messages {
        int id PK
        int session_id FK "References sessions.id"
        string role
        text content
        string audio_url
        datetime timestamp
    }

    session_summaries {
        int id PK
        int session_id FK "References sessions.id (Unique)"
        string user_uid FK "References users.firebase_uid"
        text summary_data
        datetime created_at
    }

    message_analyses {
        int id PK
        int message_id FK "References messages.id (Unique)"
        string primary_emotion
        string secondary_emotion
        int emotion_intensity
        string stress_level
        string emotional_need
        string conversation_need
        string risk_level
        string risk_details
        int urgency_score
        string selected_strategy
        datetime created_at
    }

    therapeutic_interventions {
        int id PK
        int session_id FK "References sessions.id"
        string user_uid FK "References users.firebase_uid"
        string intervention_type
        string status
        text data
        datetime created_at
        datetime updated_at
    }

    user_goals {
        int id PK
        string user_uid FK "References users.firebase_uid"
        text goal
        string category
        int progress
        string status
        datetime created_at
        datetime updated_at
    }

    session_reflections {
        int id PK
        int session_id FK "References sessions.id (Unique)"
        string user_uid FK "References users.firebase_uid"
        text breakthroughs
        text homework
        string homework_status
        text next_session_focus
        int confidence_level
        datetime created_at
    }

    mood_entries {
        int id PK
        int session_id FK "References sessions.id"
        string user_uid FK "References users.firebase_uid"
        int mood_score
        int anxiety_score
        int stress_score
        int energy_score
        int confidence_score
        datetime created_at
    }

    personality_profiles {
        int id PK
        string user_uid FK "References users.firebase_uid (Unique)"
        float analytical
        float emotional
        float action_oriented
        float reflective
        float avoidant
        float social
        float introverted
        float extroverted
        text confidence_data
        datetime updated_at
    }

    crisis_events {
        int id PK
        int session_id FK "References sessions.id"
        string user_uid FK "References users.firebase_uid"
        int trigger_message_id FK "References messages.id (Nullable)"
        int urgency_score
        text crisis_details
        text action_taken
        datetime created_at
    }

    treatment_plans {
        int id PK
        string user_uid FK "References users.firebase_uid"
        string focus_area
        text milestones
        int progress
        string completion_status
        datetime created_at
        datetime updated_at
    }

    semantic_memories_db {
        string id PK
        string user_uid FK "References users.firebase_uid"
        text content
        string memory_type
        int session_id "Nullable"
        int importance
        text vector_data
        datetime created_at
    }

    continuous_learning_data {
        int id PK
        text user_input
        string context_path
        text generated_strategy
        boolean is_processed
        datetime created_at
    }

    users ||--o{ sessions : "starts"
    users ||--|| personality_profiles : "has"
    users ||--o{ user_goals : "pursues"
    users ||--o{ treatment_plans : "follows"
    users ||--o{ semantic_memories_db : "retains"
    users ||--o{ session_summaries : "receives"
    users ||--o{ therapeutic_interventions : "undergoes"
    users ||--o{ session_reflections : "reflects on"
    users ||--o{ mood_entries : "logs"
    users ||--o{ crisis_events : "experiences"

    sessions ||--o{ messages : "contains"
    sessions ||--|| session_summaries : "summarized_by"
    sessions ||--|| session_reflections : "concludes_with"
    sessions ||--o{ mood_entries : "associated_with"
    sessions ||--o{ crisis_events : "flags"
    sessions ||--o{ therapeutic_interventions : "conducts"

    messages ||--|| message_analyses : "analyzed_by"
    messages ||--o| crisis_events : "triggers"
